# salud_tool

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/salud_tool/: __init__.py  __main__.py  app.py  cli.py  consolidate.py  excel_writer.py  model.py  saludtool.ini  storage.py
src/salud_tool/sources/: __init__.py  accuchek.py  base.py  google_fit.py
tests/: test_accuchek.py  test_cli.py  test_consolidate.py  test_excel_writer_smoke.py  test_google_fit_daily.py  test_storage.py
